CompilerParser.py
# Generated from ./Compiler.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CompilerParser ( Parser ):

    grammarFileName = "Compiler.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PROGRAM'", "'INTEGER'", "'BOOLEAN'", 
                     "'BEGIN'", "'END'", "'WHILE'", "'DO'", "'READ'", "'VAR'", 
                     "'FALSE'", "'TRUE'", "'WRITE'", "'STRING'", "'IF'", 
                     "'THEN'", "'ELSE'", "<INVALID>", "<INVALID>", "'\\'", 
                     "<INVALID>", "<INVALID>", "'~'", "';'", "'.'", "':'", 
                     "','", "'('", "')'", "':='" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "INTEGER", "BOOLEAN", "BEGIN", 
                      "END", "WHILE", "DO", "READ", "VAR", "FALSE", "TRUE", 
                      "WRITE", "STRING", "IF", "THEN", "ELSE", "OPAD", "OPMULT", 
                      "OPDIV", "OPREL", "OPLOG", "OPNEG", "PVIG", "PONTO", 
                      "DPONTOS", "VIG", "ABPAR", "FPAR", "ATRIB", "ID", 
                      "CTE", "CADEIA", "COMMENT", "WS" ]

    RULE_prog = 0
    RULE_decls = 1
    RULE_listdecl = 2
    RULE_decltip = 3
    RULE_listid = 4
    RULE_tip = 5
    RULE_cmdcomp = 6
    RULE_listcmd = 7
    RULE_cmd = 8
    RULE_cmdif = 9
    RULE_elsepart = 10
    RULE_cmdwhile = 11
    RULE_cmdread = 12
    RULE_cmdwrite = 13
    RULE_listw = 14
    RULE_elemw = 15
    RULE_cmdatrib = 16
    RULE_expr = 17
    RULE_expr1 = 18
    RULE_term = 19
    RULE_term1 = 20
    RULE_factor = 21
    RULE_factor1 = 22
    RULE_primary = 23

    ruleNames =  [ "prog", "decls", "listdecl", "decltip", "listid", "tip", 
                   "cmdcomp", "listcmd", "cmd", "cmdif", "elsepart", "cmdwhile", 
                   "cmdread", "cmdwrite", "listw", "elemw", "cmdatrib", 
                   "expr", "expr1", "term", "term1", "factor", "factor1", 
                   "primary" ]

    EOF = Token.EOF
    PROGRAM=1
    INTEGER=2
    BOOLEAN=3
    BEGIN=4
    END=5
    WHILE=6
    DO=7
    READ=8
    VAR=9
    FALSE=10
    TRUE=11
    WRITE=12
    STRING=13
    IF=14
    THEN=15
    ELSE=16
    OPAD=17
    OPMULT=18
    OPDIV=19
    OPREL=20
    OPLOG=21
    OPNEG=22
    PVIG=23
    PONTO=24
    DPONTOS=25
    VIG=26
    ABPAR=27
    FPAR=28
    ATRIB=29
    ID=30
    CTE=31
    CADEIA=32
    COMMENT=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(CompilerParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(CompilerParser.ID, 0)

        def PVIG(self):
            return self.getToken(CompilerParser.PVIG, 0)

        def decls(self):
            return self.getTypedRuleContext(CompilerParser.DeclsContext,0)


        def cmdcomp(self):
            return self.getTypedRuleContext(CompilerParser.CmdcompContext,0)


        def PONTO(self):
            return self.getToken(CompilerParser.PONTO, 0)

        def getRuleIndex(self):
            return CompilerParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = CompilerParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(CompilerParser.PROGRAM)
            self.state = 49
            self.match(CompilerParser.ID)
            self.state = 50
            self.match(CompilerParser.PVIG)
            self.state = 51
            self.decls()
            self.state = 52
            self.cmdcomp()
            self.state = 53
            self.match(CompilerParser.PONTO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(CompilerParser.VAR, 0)

        def listdecl(self):
            return self.getTypedRuleContext(CompilerParser.ListdeclContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_decls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecls" ):
                listener.enterDecls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecls" ):
                listener.exitDecls(self)




    def decls(self):

        localctx = CompilerParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.match(CompilerParser.VAR)
                self.state = 56
                self.listdecl()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decltip(self):
            return self.getTypedRuleContext(CompilerParser.DecltipContext,0)


        def listdecl(self):
            return self.getTypedRuleContext(CompilerParser.ListdeclContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_listdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListdecl" ):
                listener.enterListdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListdecl" ):
                listener.exitListdecl(self)




    def listdecl(self):

        localctx = CompilerParser.ListdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_listdecl)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.decltip()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.decltip()
                self.state = 62
                self.listdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecltipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listid(self):
            return self.getTypedRuleContext(CompilerParser.ListidContext,0)


        def DPONTOS(self):
            return self.getToken(CompilerParser.DPONTOS, 0)

        def tip(self):
            return self.getTypedRuleContext(CompilerParser.TipContext,0)


        def PVIG(self):
            return self.getToken(CompilerParser.PVIG, 0)

        def getRuleIndex(self):
            return CompilerParser.RULE_decltip

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecltip" ):
                listener.enterDecltip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecltip" ):
                listener.exitDecltip(self)




    def decltip(self):

        localctx = CompilerParser.DecltipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decltip)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.listid()
            self.state = 67
            self.match(CompilerParser.DPONTOS)
            self.state = 68
            self.tip()
            self.state = 69
            self.match(CompilerParser.PVIG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CompilerParser.ID, 0)

        def VIG(self):
            return self.getToken(CompilerParser.VIG, 0)

        def listid(self):
            return self.getTypedRuleContext(CompilerParser.ListidContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_listid

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListid" ):
                listener.enterListid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListid" ):
                listener.exitListid(self)




    def listid(self):

        localctx = CompilerParser.ListidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listid)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.match(CompilerParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.match(CompilerParser.ID)
                self.state = 73
                self.match(CompilerParser.VIG)
                self.state = 74
                self.listid()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CompilerParser.ID, 0)

        def BOOLEAN(self):
            return self.getToken(CompilerParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(CompilerParser.STRING, 0)

        def getRuleIndex(self):
            return CompilerParser.RULE_tip

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTip" ):
                listener.enterTip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTip" ):
                listener.exitTip(self)




    def tip(self):

        localctx = CompilerParser.TipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tip)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1073750024) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdcompContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(CompilerParser.BEGIN, 0)

        def listcmd(self):
            return self.getTypedRuleContext(CompilerParser.ListcmdContext,0)


        def END(self):
            return self.getToken(CompilerParser.END, 0)

        def getRuleIndex(self):
            return CompilerParser.RULE_cmdcomp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdcomp" ):
                listener.enterCmdcomp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdcomp" ):
                listener.exitCmdcomp(self)




    def cmdcomp(self):

        localctx = CompilerParser.CmdcompContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cmdcomp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(CompilerParser.BEGIN)
            self.state = 80
            self.listcmd()
            self.state = 81
            self.match(CompilerParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListcmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self):
            return self.getTypedRuleContext(CompilerParser.CmdContext,0)


        def PVIG(self):
            return self.getToken(CompilerParser.PVIG, 0)

        def listcmd(self):
            return self.getTypedRuleContext(CompilerParser.ListcmdContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_listcmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListcmd" ):
                listener.enterListcmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListcmd" ):
                listener.exitListcmd(self)




    def listcmd(self):

        localctx = CompilerParser.ListcmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_listcmd)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.cmd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.cmd()
                self.state = 85
                self.match(CompilerParser.PVIG)
                self.state = 86
                self.listcmd()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmdif(self):
            return self.getTypedRuleContext(CompilerParser.CmdifContext,0)


        def cmdwhile(self):
            return self.getTypedRuleContext(CompilerParser.CmdwhileContext,0)


        def cmdread(self):
            return self.getTypedRuleContext(CompilerParser.CmdreadContext,0)


        def cmdwrite(self):
            return self.getTypedRuleContext(CompilerParser.CmdwriteContext,0)


        def cmdatrib(self):
            return self.getTypedRuleContext(CompilerParser.CmdatribContext,0)


        def cmdcomp(self):
            return self.getTypedRuleContext(CompilerParser.CmdcompContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)




    def cmd(self):

        localctx = CompilerParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cmd)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.cmdif()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.cmdwhile()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.cmdread()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.cmdwrite()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.cmdatrib()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.cmdcomp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CompilerParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(CompilerParser.ExprContext,0)


        def THEN(self):
            return self.getToken(CompilerParser.THEN, 0)

        def cmd(self):
            return self.getTypedRuleContext(CompilerParser.CmdContext,0)


        def elsepart(self):
            return self.getTypedRuleContext(CompilerParser.ElsepartContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_cmdif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdif" ):
                listener.enterCmdif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdif" ):
                listener.exitCmdif(self)




    def cmdif(self):

        localctx = CompilerParser.CmdifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cmdif)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(CompilerParser.IF)
            self.state = 99
            self.expr()
            self.state = 100
            self.match(CompilerParser.THEN)
            self.state = 101
            self.cmd()
            self.state = 102
            self.elsepart()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElsepartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(CompilerParser.ELSE, 0)

        def cmd(self):
            return self.getTypedRuleContext(CompilerParser.CmdContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_elsepart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElsepart" ):
                listener.enterElsepart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElsepart" ):
                listener.exitElsepart(self)




    def elsepart(self):

        localctx = CompilerParser.ElsepartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_elsepart)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(CompilerParser.ELSE)
                self.state = 105
                self.cmd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdwhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(CompilerParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(CompilerParser.ExprContext,0)


        def DO(self):
            return self.getToken(CompilerParser.DO, 0)

        def cmd(self):
            return self.getTypedRuleContext(CompilerParser.CmdContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_cmdwhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdwhile" ):
                listener.enterCmdwhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdwhile" ):
                listener.exitCmdwhile(self)




    def cmdwhile(self):

        localctx = CompilerParser.CmdwhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cmdwhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(CompilerParser.WHILE)
            self.state = 110
            self.expr()
            self.state = 111
            self.match(CompilerParser.DO)
            self.state = 112
            self.cmd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdreadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(CompilerParser.READ, 0)

        def listid(self):
            return self.getTypedRuleContext(CompilerParser.ListidContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_cmdread

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdread" ):
                listener.enterCmdread(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdread" ):
                listener.exitCmdread(self)




    def cmdread(self):

        localctx = CompilerParser.CmdreadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cmdread)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(CompilerParser.READ)

            self.state = 115
            self.listid()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdwriteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(CompilerParser.WRITE, 0)

        def listw(self):
            return self.getTypedRuleContext(CompilerParser.ListwContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_cmdwrite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdwrite" ):
                listener.enterCmdwrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdwrite" ):
                listener.exitCmdwrite(self)




    def cmdwrite(self):

        localctx = CompilerParser.CmdwriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_cmdwrite)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(CompilerParser.WRITE)

            self.state = 118
            self.listw()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListwContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elemw(self):
            return self.getTypedRuleContext(CompilerParser.ElemwContext,0)


        def VIG(self):
            return self.getToken(CompilerParser.VIG, 0)

        def listw(self):
            return self.getTypedRuleContext(CompilerParser.ListwContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_listw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListw" ):
                listener.enterListw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListw" ):
                listener.exitListw(self)




    def listw(self):

        localctx = CompilerParser.ListwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_listw)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.elemw()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.elemw()
                self.state = 122
                self.match(CompilerParser.VIG)
                self.state = 123
                self.listw()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemwContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(CompilerParser.ExprContext,0)


        def CADEIA(self):
            return self.getToken(CompilerParser.CADEIA, 0)

        def getRuleIndex(self):
            return CompilerParser.RULE_elemw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElemw" ):
                listener.enterElemw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElemw" ):
                listener.exitElemw(self)




    def elemw(self):

        localctx = CompilerParser.ElemwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_elemw)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 11, 22, 27, 30, 31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.expr()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(CompilerParser.CADEIA)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdatribContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CompilerParser.ID, 0)

        def ATRIB(self):
            return self.getToken(CompilerParser.ATRIB, 0)

        def expr(self):
            return self.getTypedRuleContext(CompilerParser.ExprContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_cmdatrib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdatrib" ):
                listener.enterCmdatrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdatrib" ):
                listener.exitCmdatrib(self)




    def cmdatrib(self):

        localctx = CompilerParser.CmdatribContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_cmdatrib)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(CompilerParser.ID)
            self.state = 132
            self.match(CompilerParser.ATRIB)
            self.state = 133
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(CompilerParser.TermContext,0)


        def expr1(self):
            return self.getTypedRuleContext(CompilerParser.Expr1Context,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = CompilerParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.term()
            self.state = 136
            self.expr1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPREL(self):
            return self.getToken(CompilerParser.OPREL, 0)

        def term(self):
            return self.getTypedRuleContext(CompilerParser.TermContext,0)


        def expr1(self):
            return self.getTypedRuleContext(CompilerParser.Expr1Context,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_expr1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr1" ):
                listener.enterExpr1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr1" ):
                listener.exitExpr1(self)




    def expr1(self):

        localctx = CompilerParser.Expr1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_expr1)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(CompilerParser.OPREL)
                self.state = 139
                self.term()
                self.state = 140
                self.expr1()
                pass
            elif token in [5, 7, 15, 16, 23, 26, 28]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)
